# refactory-apprenticeship-program

./: .gitignore  CONTRIBUTING.md  README.md
BDD/: ASSIGNMENT.md  README.md  bdd_work.md  main.py  pyproject.toml
BDD/playwright_codegen_scripts/: discovery_scenario_1.py  discovery_scenario_2.py
DESIGN PATTERNS/: README.md  design_patterns.md
DESIGN PATTERNS/bridge&proxy/: README_bridge.md  README_proxy.md  bridge.py  desktop.ini  proxy& bridge.pptx  proxy.py
DESIGN PATTERNS/facade/: README_facade.md  desktop.ini  facade.py
DESIGN PATTERNS/observer&decorator/: README_decorator.md  README_observer.md  decorator.py  desktop.ini  observer.py  observer_decorator.pptx
DESIGN PATTERNS/singleton&strategy/: README_singleton.md  README_strategy.md  Singleton&strategy.pptx  desktop.ini  singleton.py  strategy.py
S.O.L.I.D/: design_patterns_analogies.md  setter.py  super_Class_Diagram.md
S.O.L.I.D/Week_2/: singleton.py  strategy.py
S.O.L.I.D/day_4/: .yaml  single_responsibility_principle.py
S.O.L.I.D/day_5/: solid.py  (+1 more)
tdd/: README.md  pyproject.toml
tdd/payment_api/: README.md  assignment.md  pyproject.toml
tdd/payment_api/app/: main.py
tdd/payment_api/app/repos/: fake_payment_repo.py
tdd/payment_api/app/routes/: customers.py  payments.py  refunds.py
tdd/payment_api/app/services/: payment_service.py
tdd/payment_api/app/utils/: validators.py
tdd/payment_api/tests/repos/: test_fake_payment_repo.py
tdd/payment_api/tests/routes/: test_routes.py
tdd/payment_api/tests/services/: test_payment_service.py
tdd/payment_api/tests/unit/: test_validators.py
(+53 files in other folders)
